--- a/style/client.css
+++ b/style/client.css
@@ -354,7 +354,8 @@ nav div h4 {
 .program div img {
     background-image: var(--img-bg);
 }
-.program form:nth-child(3) {
+/* for search box in program.php */
+.program #search {
     background-color: var(--G3);
     padding: 10px;
     border-radius: 15px;
@@ -363,13 +364,13 @@ nav div h4 {
     align-items: center;
     flex-direction: column;
 }
-.program form:nth-child(3) div {
+.program #search div {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
     margin: 10px 0 0 0;
 }
-.program form:nth-child(3) div input:nth-child(1) {
+.program #search div input:nth-child(1) {
     color: white;
     text-align: center;
     outline: none;
@@ -379,7 +380,7 @@ nav div h4 {
     border-radius: 10px 0 0 10px;
     background-color: var(--G1);
 }
-.program form:nth-child(3) div input:nth-child(2) {
+.program #search div input:nth-child(2) {
     color: white;
     background-color: var(--G1);
     padding: 10px;
@@ -394,7 +395,7 @@ input[type='date']::-webkit-calendar-picker-indicator {
     padding: 0;
     background-image: url("image/calendar.svg");
 }
-.program form:nth-child(3) div button {
+.program #search div button {
     background-color: var(--G2);
     color: white;
     font-family: roboC;
@@ -405,10 +406,10 @@ input[type='date']::-webkit-calendar-picker-indicator {
     display: flex;
     align-items: center;
 }
-.program form:nth-child(3) button img {
+.program #search button img {
     width: 15px;
 }
-.program form:nth-child(3) button p {
+.program #search button p {
     margin: 0;
     padding: 0;
 }
@@ -977,6 +978,7 @@ input[type='date']::-webkit-calendar-picker-indicator {
 #headerStyle {
     font-family: bebas;
     font-size: 300%;
+    text-align: center;
     color: white;
     animation-name: fade-IN;
     animation-duration: 1.5s;
